@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 22 Oct 2024 20:17:52 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 22 Oct 2024 20:36:53 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -356,5 +356,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>今日 K-pop：Blackpink 的 Jennie 和 Rose 創下生涯新高。。Blackpink 成員 Jennie 的個人單曲《Mantra》登上了告示牌百大單曲榜（Billboard Hot 100）第 98 名，這是她作為個人歌手在主要單曲榜上取得的最高排名。。...</description>
   <category>K-Pop</category>
   <pubDate>Tue, 22 Oct 2024 20:17:52 +0800</pubDate>
+</item><item>
+  <title>K-pop強勢回歸：Seventeen專輯銷量破200萬、BLACKPINK音樂錄影帶瀏覽量破9億</title>
+  <link>https://www.famechos.me/news/K-pop強勢回歸：Seventeen專輯銷量破200萬、BLACKPINK音樂錄影帶瀏覽量破9億.html</link>
+  <description>今日K-pop：Seventeen第12張迷你專輯銷量突破200萬張。Seventeen的第12張迷你專輯《Spill The Feels》於發行首日銷量突破249萬張，根據經紀公司Pledis Entertainment的統計數據顯示。...</description>
+  <category>K-Pop</category>
+  <pubDate>Tue, 22 Oct 2024 20:36:53 +0800</pubDate>
 </item></channel>
 </rss>
