@@ -1,0 +1,267 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-pop\u5f37\u52e2\u56de\u6b78\uff1aSeventeen\u5c08\u8f2f\u92b7\u91cf\u7834200\u842c\u3001BLACKPINK\u97f3\u6a02\u9304\u5f71\u5e36\u700f\u89bd\u91cf\u78349\u5104", "description": "K-pop\u5f37\u52e2\u56de\u6b78\uff1aSeventeen\u5c08\u8f2f\u92b7\u91cf\u7834200\u842c\u3001BLACKPINK\u97f3\u6a02\u9304\u5f71\u5e36\u700f\u89bd\u91cf\u78349\u5104", "url": "https://www.famechos.me/news/K-pop\u5f37\u52e2\u56de\u6b78\uff1aSeventeen\u5c08\u8f2f\u92b7\u91cf\u7834200\u842c\u3001BLACKPINK\u97f3\u6a02\u9304\u5f71\u5e36\u700f\u89bd\u91cf\u78349\u5104.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T20:36:33.093394+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-pop強勢回歸：Seventeen專輯銷量破200萬、BLACKPINK音樂錄影帶瀏覽量破9億.html"/>
+<meta name="description" content="K-pop強勢回歸！Seventeen專輯銷量破200萬，BLACKPINK音樂錄影帶瀏覽量破9億，韓流再度席捲全球。">
+<meta name="keywords" content="K-pop, Seventeen, BLACKPINK, 韓流, 專輯銷量, 音樂錄影帶瀏覽量">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-pop強勢回歸：Seventeen專輯銷量破200萬、BLACKPINK音樂錄影帶瀏覽量破9億.html" />
+        <meta property="og:title" content="K-pop強勢回歸：Seventeen專輯銷量破200萬、BLACKPINK音樂錄影帶瀏覽量破9億" />
+        <meta property="og:description" content="K-pop強勢回歸：Seventeen專輯銷量破200萬、BLACKPINK音樂錄影帶瀏覽量破9億" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-pop強勢回歸：Seventeen專輯銷量破200萬、BLACKPINK音樂錄影帶瀏覽量破9億" />
+        <meta property="twitter:description" content="K-pop強勢回歸：Seventeen專輯銷量破200萬、BLACKPINK音樂錄影帶瀏覽量破9億" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-pop強勢回歸：Seventeen專輯銷量破200萬、BLACKPINK音樂錄影帶瀏覽量破9億</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>Seventeen的第12張迷你專輯《Spill The Feels》於發行首日銷量突破249萬張，根據經紀公司Pledis Entertainment的統計數據顯示。</p>
+<p>該迷你專輯於週一發行，並成為瞬間雙百萬銷量專輯，就像該組合之前的精選輯《17 Is Right Here》於四月份發行時一樣。</p>
+<p>新專輯登上了iTunes Top Albums Chart的18個地區榜首，主打歌《Love, Money, Fame (feat. DJ卡利)》也登上了國內實時音樂榜榜首。</p>
+<p>該樂團於週末舉行的演唱會上率先公開了主打歌，吸引了約5.8萬名歌迷參加。該演唱會是“Right Here”巡迴演唱會的首站，將於下週在芝加哥繼續舉行，13名成員將在訪問四個美國城市後前往日本。</p>
+<p>BLACKPINK的《Pink》音樂錄影帶瀏覽量突破9億，根據YG娛樂的統計數據顯示。</p>
+<p>這是該組合的第11支錄影帶達到此成就，約兩年兩個月內達到此里程碑。該錄影帶已經創下了女性藝人的世界紀錄，在24小時內獲得9040萬次瀏覽量。</p>
+<p>這首嘻哈曲融合了韓國傳統樂器geomungo的元素，於Billboard Hot 100和英國官方歌曲榜上排名第22位。</p>
+<p>它是該組合第二張錄音室專輯《Born Pink》的先行曲，也是第一首登上Spotify Weekly Top Songs Chart榜首的K-pop歌曲。該組合獲得了MTV Video Music Awards的最佳編舞獎，這是亞洲女子組合的首次獲獎，並被評為年度最佳組合。</p><h2>Le Sserafim《Eve, Psyche & The Bluebeard’s Wife》在Spotify上播放量突破2億</h2>
+<p>Le Sserafim的歌曲《Eve, Psyche and The Bluebeard’s Wife》在Spotify上播放量突破2億。這是該組合的第七首歌曲達到此成就。</p>
+<p>該歌曲是該組合首張完整專輯《Unforgiven》的B面曲，於去年五月發行。就在兩天前，該組合的另一首歌曲《Easy》也達到了此里程碑。</p>
+<p>Zico將於六年後再度舉行個人演唱會，名為“Zico Live: Join the Parade”。演唱會將於十一月23日至24日在首爾舉行。</p>
+<p>該組合Le Sserafim也被2024年MTV歐洲音樂大獎提名為最佳新人、最佳K-pop和最佳推廣獎，頒獎典禮將於十一月舉行。該組合於上個月在MTV Video Music Awards的預展表演中獲得了年度推廣表演獎。</p>
+<p>音樂人Zico即將舉行10周年紀念演唱會，紀念他作為獨立音樂人的10周年。他的經紀公司凱歐智娛樂（KOZ Entertainment）分享了他與BLACKPINK成員金珍妮（Jennie）合作的歌曲“Spot!”的音樂視頻在YouTube上已經獲得了1億次點擊。</p>
+<p>這是他繼2020年熱門歌曲“Any Song”之後，第二個達到這一成就的音樂視頻。這首與金珍妮合作的歌曲登上了Billboard的世界數字歌曲銷售榜榜首，並被Billboard和新音樂快遞（NME）雜誌列為今年最佳K-pop歌曲之一。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2EkprL6H7M8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/ILLIT強勢回歸！新專輯《I'll Like You》融入年齡段想法的音樂.html">ILLIT強勢回歸！新專輯《I'll Like You》融入年齡段想法的音樂</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/74歲K-pop傳奇人物Cho Yong-pil再度出擊！第20張專輯《20》正式發行.html">74歲K-pop傳奇人物Cho Yong-pil再度出擊！第20張專輯《20》正式發行</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/揭露人性的複雜深度：韓國導演金大祐新作《隱藏的面孔》即將上映.html">揭露人性的複雜深度：韓國導演金大祐新作《隱藏的面孔》即將上映</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
