@@ -398,4 +398,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/K-pop強勢回歸：Seventeen專輯銷量破200萬、BLACKPINK音樂錄影帶瀏覽量破9億.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T20:36:53+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
